tests/cases/scc/error/0023-include.c.res
./tests/cases/scc/error/0023-include.h:4:1:	error:   comment must end before end of file.
exit code 1
